--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 	<script src="scripts/vendor/jquery.js"></script>
 	<script src="scripts/vendor/jquery-ui.custom.min.js"></script>
 	
-	<script src="scripts/vendor/angular.min.js"></script>
+	<script src="scripts/vendor/angular.js"></script>
 	<script src="scripts/vendor/angular-route.min.js"></script>
 	<script src="scripts/vendor/angular-cookies.min.js"></script>
 
