login page added

--- a/public/login.html
+++ b/public/login.html
@@ -11,7 +11,7 @@
 							
 							<!-- Login input-->
 							<div class="form-group">
-								<label class="col-md-4 control-label" for="logininput" data-i18n="login.userName"></label>
+								<label class="col-md-4 control-label" for="logininput">Логин</label>
 								<div class="col-md-6">
 									<input id="logininput" 
 										name="userName" 
@@ -23,7 +23,7 @@
 	
 							<!-- Password input-->
 							<div class="form-group">
-								<label class="col-md-4 control-label" for="passwordinput" data-i18n="login.pass"></label>
+								<label class="col-md-4 control-label" for="passwordinput">Пароль</label>
 								<div class="col-md-6">
 									<input id="passwordinput" 
 										name="password" 
@@ -32,20 +32,7 @@
 										class="form-control input-md">
 								</div>
 							</div>
-	
-							<!-- Remember me Checkboxes -->
-							<div class="form-group">
-								<label class="col-md-4 control-label" for="checkboxesRemember"></label>
-								<div class="col-md-4">
-									<div class="checkbox">
-										<label for="checkboxesRemember-0"><input
-											type="checkbox" name="rememberMe"
-											id="checkboxesRemember-0"> <span data-i18n="login.rememberMe"></span>
-										</label>
-									</div>
-								</div>
-							</div>
-	
+							
 							<!-- Button (Double) -->
 							<div class="form-group">
 								<label class="col-md-4 control-label" for="buttonLogin"></label>
