--- a/public/index.html
+++ b/public/index.html
@@ -1,30 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script src="scripts/vendor/jquery.js"></script>
-	<script src="scripts/vendor/jquery-ui.custom.min.js"></script>
+	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 	
-	<script src="scripts/vendor/angular.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.js"></script>
 	<script src="scripts/vendor/angular-route.min.js"></script>
 	<script src="scripts/vendor/angular-cookies.min.js"></script>
 
-	<script src="scripts/vendor/i18next.js"></script>
-	<script src="scripts/vendor/i18next-1.7.1.min.js"></script>
-
 	<script src="scripts/security/routingConfig.js"></script>
-
 	
 	<script type="text/javascript" src="scripts/vendor/require.min.js" data-main="scripts/appBootstrap.js"></script>
 
-	<script src="styles/bootstrap/js/bootstrap.js"></script>
-	<script src="styles/bootstrap/js/ui-bootstrap-custom-0.9.0.min.js"></script>
-	<script src="styles/bootstrap/js/ui-bootstrap-custom-tpls-0.9.0.min.js"></script>
-	
-	<script src="styles/bootstrap/js/fileinput.js"></script>
-	<script src="scripts/vendor/fullcalendar.js"></script>
-	<script src="scripts/vendor/calendar.js"></script>
-	<link href="styles/fullcalendar.css" rel="stylesheet">
-	<link href="styles/bootstrap/css/bootstrap.css" rel="stylesheet" >	
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 	
 	<title>Kronan Registration</title>
 </head>
