--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-	
+
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.js"></script>
+	<script src="scripts/vendor/ui-bootstrap-custom-0.10.0.min.js"></script>
+	<script src="scripts/vendor/ui-bootstrap-custom-tpls-0.10.0.min.js"></script>
 	<script src="scripts/vendor/angular-route.min.js"></script>
-	<script src="scripts/vendor/angular-cookies.min.js"></script>
 
 	<script src="scripts/security/routingConfig.js"></script>
 	
@@ -13,7 +14,7 @@
 
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-	
+
 	<title>Kronan Registration</title>
 </head>
 <body>
