--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	<script type="text/javascript" src="scripts/vendor/jquery.js"></script>
 	<link href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" media="all" rel="stylesheet" type="text/css"/>
 	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
 
@@ -19,7 +19,7 @@
 	<link rel="stylesheet" href="styles/jquery.pnotify.default.css">
 	<link rel="stylesheet" href="styles/jquery.pnotify.default.icons.css">
 	
-	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+	<script src="styles/bootstrap/js/bootstrap.js"></script>
 
 	<link rel="stylesheet" href="styles/style.css">
 
